--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,3 +27,10 @@ pillow>=10.1.0
 requests>=2.31.0
 aiosqlite>=0.19.0
 asyncpg>=0.29.0
+
+# oEmbed Support
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+python-dateutil>=2.8.0
+pydantic>=2.0.0
+urlextract>=1.8.0
