--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,35 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
     "autoprefixer": "^10.4.16",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "14.0.0",
     "next-pwa": "^5.6.0",
     "postcss": "^8.4.31",
     "react": "^18",
     "react-dom": "^18",
-    "tailwindcss": "^3.3.5"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@playwright/test": "^1.54.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@types/node": "^20",
+    "@types/lodash": "^4.14.200",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
